RESOLVED FIXED54583
[Qt] White screen is displayed when tiled backing store is enabled in MiniBrowser.
https://bugs.webkit.org/show_bug.cgi?id=54583
Summary [Qt] White screen is displayed when tiled backing store is enabled in MiniBro...
Yael
Reported 2011-02-16 13:54:39 PST
The same fix as in https://bugs.webkit.org/show_bug.cgi?id=54577 is needed for invalidating the tiles. A patch is coming.
Attachments
Patch. (1.63 KB, patch)
2011-02-16 13:59 PST, Yael
no flags
Yael
Comment 1 2011-02-16 13:59:03 PST
Andreas Kling
Comment 2 2011-02-16 13:59:37 PST
Comment on attachment 82688 [details] Patch. r=me
WebKit Commit Bot
Comment 3 2011-02-16 19:02:36 PST
Comment on attachment 82688 [details] Patch. Rejecting attachment 82688 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'land-a..." exit_code: 1 Last 500 characters of output: ommit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run if self._has_valid_reviewer(changelog_entry): File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output: http://queues.webkit.org/results/7918562
WebKit Commit Bot
Comment 4 2011-02-16 20:29:12 PST
Comment on attachment 82688 [details] Patch. Clearing flags on attachment: 82688 Committed r78785: <http://trac.webkit.org/changeset/78785>
WebKit Commit Bot
Comment 5 2011-02-16 20:29:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.