2011-02-16  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Andreas Kling.

        [Qt] White screen is displayed when tiled backing store is enabled in MiniBrowser.
        https://bugs.webkit.org/show_bug.cgi?id=54583

        Make sure to invalidate all the tiles, including the last one.

        * UIProcess/TiledDrawingAreaProxy.cpp:
        (WebKit::TiledDrawingAreaProxy::invalidate):

Canonical link: https://commits.webkit.org/68752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78785 268f45cc-cd09-0410-ab3c-d52691b4dbfc